// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Query projects and proposals gets the groups allowed to view a restricted project 1`] = `
Object {
  "project": Object {
    "restrictedViewers": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "id": "R3JvdXA6Z3JvdXAy",
            "title": "Agent de la ville",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "id": "R3JvdXA6Z3JvdXAz",
            "title": "Utilisateurs",
          },
        },
      ],
      "totalCount": 2,
      "totalUserCount": 131,
    },
  },
}
`;

exports[`Internal|Query projects and proposals gets the open consultation step of a project 1`] = `
Object {
  "node": Object {
    "consultationStepOpen": Object {
      "title": "Étape de multi-consultation",
    },
  },
}
`;

exports[`Internal|Query projects and proposals gets the published posts linked to a project 1`] = `
Object {
  "node": Object {
    "posts": Object {
      "edges": Array [
        Object {
          "node": Object {
            "isPublished": true,
            "publishedAt": "2018-11-05 00:00:01",
            "title": "Post FR 10",
          },
        },
        Object {
          "node": Object {
            "isPublished": true,
            "publishedAt": "2018-11-03 00:00:00",
            "title": "Post FR 6",
          },
        },
      ],
      "totalCount": 4,
    },
  },
}
`;

exports[`Internal|Query projects and proposals includes unpublished votes when requested 1`] = `
Object {
  "proposal": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "1055",
            "published": true,
          },
        },
        Object {
          "node": Object {
            "id": "1054",
            "published": true,
          },
        },
        Object {
          "node": Object {
            "id": "1053",
            "published": true,
          },
        },
        Object {
          "node": Object {
            "id": "1056",
            "published": false,
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Query projects and proposals lists a proposal followers 1`] = `
Object {
  "proposal": Object {
    "followers": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "_id": "user2",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "_id": "user1",
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Query projects and proposals lists all project types 1`] = `
Object {
  "projectTypes": Array [
    Object {
      "id": "16",
      "title": "project.types.callForApplications",
    },
    Object {
      "id": "1",
      "title": "project.types.callForProject",
    },
    Object {
      "id": "14",
      "title": "project.types.concertation",
    },
    Object {
      "id": "2",
      "title": "global.consultation",
    },
    Object {
      "id": "9",
      "title": "global.debate",
    },
    Object {
      "id": "15",
      "title": "project.types.inquiry",
    },
    Object {
      "id": "3",
      "title": "project.types.interpellation",
    },
    Object {
      "id": "13",
      "title": "project.types.mutualHelp",
    },
    Object {
      "id": "4",
      "title": "project.types.participatoryBudgeting",
    },
    Object {
      "id": "12",
      "title": "project.types.participatoryFunding",
    },
    Object {
      "id": "5",
      "title": "project.types.petition",
    },
    Object {
      "id": "19",
      "title": "project.types.publicConsultation",
    },
    Object {
      "id": "6",
      "title": "project.types.publicInquiry",
    },
    Object {
      "id": "11",
      "title": "project.types.questionAnswer",
    },
    Object {
      "id": "7",
      "title": "global.questionnaire",
    },
    Object {
      "id": "17",
      "title": "project.types.quizz",
    },
    Object {
      "id": "8",
      "title": "project.types.suggestionBox",
    },
    Object {
      "id": "18",
      "title": "project.types.testimony",
    },
    Object {
      "id": "10",
      "title": "voting",
    },
  ],
}
`;

exports[`Internal|Query projects and proposals lists project authors 1`] = `
Object {
  "projectAuthors": Array [
    Object {
      "username": "emailingadmin",
    },
    Object {
      "username": "lbrunet",
    },
    Object {
      "username": "admin",
    },
    Object {
      "username": "Vince",
    },
    Object {
      "username": "Jpec",
    },
    Object {
      "username": "spyl",
    },
    Object {
      "username": "Théo QP",
    },
    Object {
      "username": "welcomattic",
    },
    Object {
      "username": "xlacot",
    },
    Object {
      "username": "sfavot",
    },
    Object {
      "username": "GIEC",
    },
  ],
}
`;

exports[`Internal|Query projects and proposals lists project types used by projects for internal 1`] = `
Object {
  "projectTypes": Array [
    Object {
      "id": "1",
      "slug": "call-for-projects",
      "title": "project.types.callForProject",
    },
    Object {
      "id": "2",
      "slug": "consultation",
      "title": "global.consultation",
    },
    Object {
      "id": "3",
      "slug": "interpellation",
      "title": "project.types.interpellation",
    },
    Object {
      "id": "4",
      "slug": "participatory-budgeting",
      "title": "project.types.participatoryBudgeting",
    },
    Object {
      "id": "7",
      "slug": "questionnaire",
      "title": "global.questionnaire",
    },
    Object {
      "id": "8",
      "slug": "suggestion-box",
      "title": "project.types.suggestionBox",
    },
    Object {
      "id": "9",
      "slug": "debate",
      "title": "global.debate",
    },
  ],
}
`;

exports[`Internal|Query projects and proposals lists project types used by projects for internal_admin 1`] = `
Object {
  "projectTypes": Array [
    Object {
      "id": "1",
      "slug": "call-for-projects",
      "title": "project.types.callForProject",
    },
    Object {
      "id": "2",
      "slug": "consultation",
      "title": "global.consultation",
    },
    Object {
      "id": "3",
      "slug": "interpellation",
      "title": "project.types.interpellation",
    },
    Object {
      "id": "4",
      "slug": "participatory-budgeting",
      "title": "project.types.participatoryBudgeting",
    },
    Object {
      "id": "7",
      "slug": "questionnaire",
      "title": "global.questionnaire",
    },
    Object {
      "id": "8",
      "slug": "suggestion-box",
      "title": "project.types.suggestionBox",
    },
    Object {
      "id": "9",
      "slug": "debate",
      "title": "global.debate",
    },
  ],
}
`;

exports[`Internal|Query projects and proposals lists project types used by projects for internal_user 1`] = `
Object {
  "projectTypes": Array [
    Object {
      "id": "1",
      "slug": "call-for-projects",
      "title": "project.types.callForProject",
    },
    Object {
      "id": "2",
      "slug": "consultation",
      "title": "global.consultation",
    },
    Object {
      "id": "3",
      "slug": "interpellation",
      "title": "project.types.interpellation",
    },
    Object {
      "id": "4",
      "slug": "participatory-budgeting",
      "title": "project.types.participatoryBudgeting",
    },
    Object {
      "id": "7",
      "slug": "questionnaire",
      "title": "global.questionnaire",
    },
    Object {
      "id": "8",
      "slug": "suggestion-box",
      "title": "project.types.suggestionBox",
    },
    Object {
      "id": "9",
      "slug": "debate",
      "title": "global.debate",
    },
  ],
}
`;

exports[`Internal|Query projects and proposals lists proposals followed by the current user 1`] = `
Object {
  "viewer": Object {
    "followingProposals": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Query projects and proposals lists trashed project comments in reverse publication order 1`] = `
Object {
  "node": Object {
    "comments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "_id": "trashedComment70",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment69",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment68",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment67",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment66",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment65",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment64",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment63",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment62",
          },
        },
        Object {
          "node": Object {
            "_id": "trashedComment61",
          },
        },
      ],
      "totalCount": 70,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal|Query projects and proposals paginates proposal followers after YXJyYXljb25uZWN0aW9uOjMx 1`] = `
Object {
  "proposal": Object {
    "followers": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjMy",
          "node": Object {
            "id": "VXNlcjp1c2VyNDg=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjMz",
          "node": Object {
            "id": "VXNlcjp1c2VyNDc=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM0",
          "node": Object {
            "id": "VXNlcjp1c2VyNDY=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM1",
          "node": Object {
            "id": "VXNlcjp1c2VyNDU=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM2",
          "node": Object {
            "id": "VXNlcjp1c2VyNDQ=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM3",
          "node": Object {
            "id": "VXNlcjp1c2VyNDM=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM4",
          "node": Object {
            "id": "VXNlcjp1c2VyNDI=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM5",
          "node": Object {
            "id": "VXNlcjp1c2VyNDE=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQw",
          "node": Object {
            "id": "VXNlcjp1c2VyNDA=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQx",
          "node": Object {
            "id": "VXNlcjp1c2VyMzk=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQy",
          "node": Object {
            "id": "VXNlcjp1c2VyMzg=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQz",
          "node": Object {
            "id": "VXNlcjp1c2VyMzc=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ0",
          "node": Object {
            "id": "VXNlcjp1c2VyMzY=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ1",
          "node": Object {
            "id": "VXNlcjp1c2VyMzU=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ2",
          "node": Object {
            "id": "VXNlcjp1c2VyMzQ=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ3",
          "node": Object {
            "id": "VXNlcjp1c2VyMzM=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ4",
          "node": Object {
            "id": "VXNlcjp1c2VyMzI=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ5",
          "node": Object {
            "id": "VXNlcjp1c2VyMzE=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjUw",
          "node": Object {
            "id": "VXNlcjp1c2VyMzA=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjUx",
          "node": Object {
            "id": "VXNlcjp1c2VyMjk=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjUy",
          "node": Object {
            "id": "VXNlcjp1c2VyMjg=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjUz",
          "node": Object {
            "id": "VXNlcjp1c2VyMjc=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU0",
          "node": Object {
            "id": "VXNlcjp1c2VyMjY=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU1",
          "node": Object {
            "id": "VXNlcjp1c2VyMjU=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU2",
          "node": Object {
            "id": "VXNlcjp1c2VyMjQ=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU3",
          "node": Object {
            "id": "VXNlcjp1c2VyMTA=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU4",
          "node": Object {
            "id": "VXNlcjp1c2VyOQ==",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU5",
          "node": Object {
            "id": "VXNlcjp1c2VyOA==",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjYw",
          "node": Object {
            "id": "VXNlcjp1c2VyNw==",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjYx",
          "node": Object {
            "id": "VXNlcjp1c2VyNg==",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjYy",
          "node": Object {
            "id": "VXNlcjp1c2VyNQ==",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjYz",
          "node": Object {
            "id": "VXNlcjp1c2VyQWRtaW4=",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjYz",
        "hasNextPage": true,
      },
      "totalCount": 66,
    },
    "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
  },
}
`;

exports[`Internal|Query projects and proposals paginates proposal followers after null 1`] = `
Object {
  "proposal": Object {
    "followers": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "id": "VXNlcjp1c2VyODA=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzk=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzg=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzc=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzY=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzU=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzQ=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzM=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzI=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
          "node": Object {
            "id": "VXNlcjp1c2VyNzE=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjEw",
          "node": Object {
            "id": "VXNlcjp1c2VyNzA=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
          "node": Object {
            "id": "VXNlcjp1c2VyNjk=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjEy",
          "node": Object {
            "id": "VXNlcjp1c2VyNjg=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjEz",
          "node": Object {
            "id": "VXNlcjp1c2VyNjc=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE0",
          "node": Object {
            "id": "VXNlcjp1c2VyNjY=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE1",
          "node": Object {
            "id": "VXNlcjp1c2VyNjU=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE2",
          "node": Object {
            "id": "VXNlcjp1c2VyNjQ=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE3",
          "node": Object {
            "id": "VXNlcjp1c2VyNjM=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE4",
          "node": Object {
            "id": "VXNlcjp1c2VyNjI=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE5",
          "node": Object {
            "id": "VXNlcjp1c2VyNjE=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjIw",
          "node": Object {
            "id": "VXNlcjp1c2VyNjA=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjIx",
          "node": Object {
            "id": "VXNlcjp1c2VyNTk=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjIy",
          "node": Object {
            "id": "VXNlcjp1c2VyNTg=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjIz",
          "node": Object {
            "id": "VXNlcjp1c2VyNTc=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI0",
          "node": Object {
            "id": "VXNlcjp1c2VyNTY=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI1",
          "node": Object {
            "id": "VXNlcjp1c2VyNTU=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI2",
          "node": Object {
            "id": "VXNlcjp1c2VyNTQ=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI3",
          "node": Object {
            "id": "VXNlcjp1c2VyNTM=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI4",
          "node": Object {
            "id": "VXNlcjp1c2VyNTI=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI5",
          "node": Object {
            "id": "VXNlcjp1c2VyNTE=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjMw",
          "node": Object {
            "id": "VXNlcjp1c2VyNTA=",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjMx",
          "node": Object {
            "id": "VXNlcjp1c2VyNDk=",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjMx",
        "hasNextPage": true,
      },
      "totalCount": 66,
    },
    "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
  },
}
`;

exports[`Internal|Query projects and proposals paginates proposal votes after a cursor 1`] = `
Object {
  "node": Object {
    "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
    "votes": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "1042",
          },
        },
        Object {
          "node": Object {
            "id": "1041",
          },
        },
        Object {
          "node": Object {
            "id": "1040",
          },
        },
        Object {
          "node": Object {
            "id": "1039",
          },
        },
        Object {
          "node": Object {
            "id": "1038",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTA2MDYwMDAwO2k6MTtzOjQ6IjEwMzgiO30=",
        "hasNextPage": true,
        "startCursor": "YToyOntpOjA7aToxNDg1OTA2MzAwMDAwO2k6MTtzOjQ6IjEwNDIiO30=",
      },
      "totalCount": 47,
    },
  },
}
`;

exports[`Internal|Query projects and proposals paginates proposal-step votes with a page size of 5 1`] = `
Object {
  "node": Object {
    "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "votes": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1066",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1000",
                  },
                },
              ],
              "pageInfo": Object {
                "endCursor": "YToyOntpOjA7aToxNDI1MTY0NDAxMDAwO2k6MTtzOjQ6IjEwMDAiO30=",
                "hasNextPage": false,
                "startCursor": "YToyOntpOjA7aToxNzA0MDYzNjAwMDAwO2k6MTtzOjQ6IjEwNjYiO30=",
              },
              "totalCount": 2,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1047",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1046",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1045",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1044",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1043",
                  },
                },
              ],
              "pageInfo": Object {
                "endCursor": "YToyOntpOjA7aToxNDg1OTA2MzYwMDAwO2k6MTtzOjQ6IjEwNDMiO30=",
                "hasNextPage": true,
                "startCursor": "YToyOntpOjA7aToxNDg1OTA2NjAwMDAwO2k6MTtzOjQ6IjEwNDciO30=",
              },
              "totalCount": 47,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|Query projects and proposals paginates proposal-step votes with a page size of 15 1`] = `
Object {
  "node": Object {
    "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "votes": Object {
              "edges": Array [],
              "pageInfo": Object {
                "endCursor": null,
                "hasNextPage": false,
                "startCursor": null,
              },
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1066",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1000",
                  },
                },
              ],
              "pageInfo": Object {
                "endCursor": "YToyOntpOjA7aToxNDI1MTY0NDAxMDAwO2k6MTtzOjQ6IjEwMDAiO30=",
                "hasNextPage": false,
                "startCursor": "YToyOntpOjA7aToxNzA0MDYzNjAwMDAwO2k6MTtzOjQ6IjEwNjYiO30=",
              },
              "totalCount": 2,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1047",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1046",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1045",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1044",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1043",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1042",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1041",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1040",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1039",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1038",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1037",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1036",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1035",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1034",
                  },
                },
                Object {
                  "node": Object {
                    "id": "1033",
                  },
                },
              ],
              "pageInfo": Object {
                "endCursor": "YToyOntpOjA7aToxNDg1OTA1NzYwMDAwO2k6MTtzOjQ6IjEwMzMiO30=",
                "hasNextPage": true,
                "startCursor": "YToyOntpOjA7aToxNDg1OTA2NjAwMDAwO2k6MTtzOjQ6IjEwNDciO30=",
              },
              "totalCount": 47,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|Query projects and proposals separates votes on collect and selection steps 1`] = `
Object {
  "node": Object {
    "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdHN0ZXAx",
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "allVotes": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [],
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjExOiJwcm9wb3NhbDEwOCI7fQ==",
          "node": Object {
            "allVotes": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDg=",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [],
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "allVotes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1066",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
                Object {
                  "node": Object {
                    "id": "1000",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
              ],
              "totalCount": 2,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1066",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
                Object {
                  "node": Object {
                    "id": "1000",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
              ],
              "totalCount": 2,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "allVotes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1047",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
                Object {
                  "node": Object {
                    "id": "1046",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
                Object {
                  "node": Object {
                    "id": "1045",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
              ],
              "totalCount": 47,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1047",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
                Object {
                  "node": Object {
                    "id": "1046",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
                Object {
                  "node": Object {
                    "id": "1045",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Sélection",
                    },
                  },
                },
              ],
              "totalCount": 47,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODU5MDAwO2k6MTtzOjk6InByb3Bvc2FsNCI7fQ==",
          "node": Object {
            "allVotes": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWw0",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [],
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTA0MDIwMDAwO2k6MTtzOjEwOiJwcm9wb3NhbDEwIjt9",
          "node": Object {
            "allVotes": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMA==",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [],
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTA0MDgwMDAwO2k6MTtzOjEwOiJwcm9wb3NhbDExIjt9",
          "node": Object {
            "allVotes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1052",
                    "published": true,
                    "step": Object {
                      "__typename": "SelectionStep",
                      "title": "Fermée",
                    },
                  },
                },
              ],
              "totalCount": 1,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMQ==",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [],
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNTIzMzk3NjAwMDAwO2k6MTtzOjExOiJwcm9wb3NhbDEwNCI7fQ==",
          "node": Object {
            "allVotes": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDQ=",
            "votesOnCollect": Object {
              "edges": Array [],
              "totalCount": 0,
            },
            "votesOnSelection": Object {
              "edges": Array [],
              "totalCount": 0,
            },
          },
        },
      ],
    },
  },
}
`;
